[gd_scene load_steps=7 format=3 uid="uid://cayg1yekc3fx7"]

[ext_resource type="Texture2D" uid="uid://dk6y43it213is" path="res://Assets/Enemies/Destroyer.png" id="1_85dfo"]
[ext_resource type="Script" path="res://actors/entities/Destroyer.gd" id="2_3cn6l"]
[ext_resource type="AudioStream" uid="uid://rqyg6wryjs6x" path="res://Assets/sfx/enemy_kaboom.mp3" id="3_7y4qu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ku6e3"]
size = Vector2(212.526, 36.4331)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbrio"]
bg_color = Color(0.509804, 0.498039, 0.505882, 1)
skew = Vector2(0.8, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7iol"]
bg_color = Color(0.6, 0.215686, 0.219608, 1)
skew = Vector2(0.8, 0)
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[node name="Enemy" type="Sprite2D"]
scale = Vector2(0.546875, 0.546875)
texture = ExtResource("1_85dfo")
flip_h = true
script = ExtResource("2_3cn6l")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(12.4444, -6.22222)
scale = Vector2(1.601, 1.601)
shape = SubResource("RectangleShape2D_ku6e3")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(11.5556, -8.88889)
scale = Vector2(16.8912, 2.67343)

[node name="Enemy_Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7y4qu")
pitch_scale = 3.31
max_polyphony = 10

[node name="HP" type="ProgressBar" parent="."]
offset_left = -148.0
offset_top = 37.0
offset_right = 181.0
offset_bottom = 42.0
theme_override_styles/background = SubResource("StyleBoxFlat_qbrio")
theme_override_styles/fill = SubResource("StyleBoxFlat_b7iol")
value = 40.0
show_percentage = false

[node name="T1" type="Marker2D" parent="."]
position = Vector2(14.6286, -43.8857)

[node name="AttackTimer3" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="T2" type="Marker2D" parent="."]
position = Vector2(34.7429, 32.9143)

[node name="AttackTimer2" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="T3" type="Marker2D" parent="."]
position = Vector2(-89.5999, -36.5714)

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="AttackTimer3" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackTimer2" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
